--- a/index1.html
+++ b/index1.html
@@ -108,6 +108,52 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+		<style>
+.ep_card_title{text-transform: uppercase;}
+</style>
+<div class="container" style="margin-top: 60px;">
+<div class="row">
+<div class="col-md-6">
+<h1 style="font-family: MyriadProBold;font-size: 40px;">NOUVEAUX ÉPISODES<br></h1>
+<a href='watch?s=0&e=02'>
+<div data-bss-hover-animate='pulse' style='position: relative;text-align: center;color: white;margin-bottom: 15px;'>
+<h1 class='ep_card_title'>Shanghai, Ladydragon</h1><img style='background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url(https://i.ibb.co/4d021h2/Shanghai.jpg) center/cover;!important' class='ep_card_img' />
+</div>
+</a>
+<a href='watch?s=4&e=01'>
+<div data-bss-hover-animate='pulse' style='position: relative;text-align: center;color: white;margin-bottom: 15px;'>
+<h1 class='ep_card_title'>Vérité</h1><img style='background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url(https://i.ibb.co/RDJGfLp/vlcsnap-2021-04-03-08h41m54s875.jpg) center/cover;!important' class='ep_card_img' />
+</div>
+</a>
+</div>
+<div class="col-md-6">
+<h1 style="font-family: MyriadProBold;font-size: 40px;">EN DIRECT<br></h1><style>
+.twitch .twitch-video {
+  padding-top: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.twitch .twitch-video iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+</style>
+<div class="twitch" style="background-color: black;">
+<div class="twitch-video">
+<iframe src="https://player.twitch.tv/?channel=MiraculousTO&parent=miraculous.to&parent=www.miraculous.to&autoplay=true" frameborder="0" scrolling="no" allowfullscreen="true" height="100%" width="100%">
+    </iframe>
+</div>
+</div>
+</div>
+</div>
+<div class="container" style="margin-top: 20px; padding: 0;">
+<div class="row">
+<div class="col" style="padding: 0;">
+<div>
+   <div id="respond" class="comment-respond title-wrap--line" style="    margin-top: -40px;">
     	<hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
