--- a/406sub.html
+++ b/406sub.html
@@ -78,30 +78,16 @@
 <section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAtDb3XLd" id="custom-html-1w" data-rv-view="281">
   <h1><br><br>Lie</h1>
    <hr>
-  <p>Season 4 episode 2<br>
+  <p>Season 4 episode 6<br>
 	  English subtitles thanks to:
-@thedonutxd
-@victoria_frdl
-@bvginett
-@x._fluff_.x
-@papillon_gabrielagreste
-@mayasagrr
-@chat_blog009
-@its_marichat
-@zarahevabovic
-@thaneetea_
-@adrinette_for_ever
-@wayzz_world
-@miraculoustoons
-@miraculorime
-@creator_freak  
+
 	</p>
 
 	<div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
-         <p style="margin-top: 10px;margin-bottom: 0px;">SELECT YOUR SERVER: *Note: if the first server didn't work with english subtitles, click on the second one* <br>
+         <p style="margin-top: 10px;margin-bottom: 0px;">SELECT YOUR LANGUAGE: <br>
 
-<a title='ANGLAIS' href='/402sub' style='color:#FFFFFF;'>SERVER 1</a>
-         <a title='FRANÇAIS' href='/402subb' style='color:#FFFFFF;'>SERVER 2</a>     </p>
+<a title='ENGLISH SUBTITLES' href='/402sub' style='color:#FFFFFF;'>ENGLISH SUBTITLES</a>
+         <a title='SPANISH SUBTITLES' href='/402subb' style='color:#FFFFFF;'>SPANISH SUBTITLES</a>     </p>
     </div>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
